# Generated by Django 5.1.7 on 2025-05-27 03:17

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tr4cking_rest_api', '0003_alter_empleado_fecha_ingreso'),
    ]

    operations = [
        migrations.CreateModel(
            name='Caja',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.TextField()),
                ('estado', models.CharField(max_length=20)),
                ('fecha_creacion', models.DateField()),
                ('monto_inicial', models.IntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='Timbrado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_timbrado', models.CharField(max_length=15, unique=True)),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('activo', models.BooleanField(default=True)),
            ],
        ),
        migrations.CreateModel(
            name='TipoDocumento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('codigo', models.CharField(max_length=10, unique=True)),
                ('descripcion', models.TextField()),
                ('requiere_cliente_registrado', models.BooleanField(default=False)),
            ],
        ),
        migrations.AlterField(
            model_name='asiento',
            name='tipo_asiento',
            field=models.CharField(blank=True, choices=[('Semi-cama', 'Semi-cama'), ('Cama', 'Cama')], default='Semi-cama', max_length=20, null=True),
        ),
        migrations.CreateModel(
            name='CabeceraFactura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_factura', models.TextField(unique=True)),
                ('fecha_factura', models.DateField(auto_now_add=True)),
                ('condicion', models.CharField(default='Contado', max_length=30)),
                ('monto_total', models.DecimalField(decimal_places=2, max_digits=10)),
                ('monto_exenta', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('monto_iva_10', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('monto_iva_5', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('estado', models.CharField(max_length=20)),
                ('cliente', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='tr4cking_rest_api.cliente')),
                ('empleado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.empleado')),
                ('parada', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.parada')),
                ('timbrado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.timbrado')),
            ],
        ),
        migrations.CreateModel(
            name='CabeceraCaja',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo_mov', models.CharField(max_length=20)),
                ('fecha_mov', models.DateTimeField()),
                ('monto_inical', models.DecimalField(decimal_places=2, max_digits=12)),
                ('monto_final', models.DecimalField(decimal_places=2, max_digits=12)),
                ('empleado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.empleado')),
                ('caja', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.caja')),
            ],
        ),
        migrations.CreateModel(
            name='DetalleCaja',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField(blank=True, null=True)),
                ('tipo_transaccion', models.CharField(max_length=50)),
                ('monto', models.IntegerField()),
                ('fecha_transaccion', models.DateTimeField()),
                ('cabecera_caja', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.cabeceracaja')),
                ('factura', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='tr4cking_rest_api.cabecerafactura')),
            ],
        ),
        migrations.CreateModel(
            name='DetalleFactura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cantidad', models.SmallIntegerField(default=1)),
                ('precio_unitario', models.DecimalField(decimal_places=2, max_digits=10)),
                ('descripcion', models.CharField(max_length=100)),
                ('iva_porcentaje', models.SmallIntegerField()),
                ('subtotal', models.DecimalField(decimal_places=2, max_digits=12)),
                ('encomienda', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='tr4cking_rest_api.encomienda')),
                ('factura', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.cabecerafactura')),
                ('pasaje', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='tr4cking_rest_api.pasaje')),
            ],
        ),
        migrations.CreateModel(
            name='HistorialFactura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_cambio', models.DateTimeField(auto_now_add=True)),
                ('campo_modificado', models.CharField(max_length=30)),
                ('valor_anterior', models.TextField(blank=True, null=True)),
                ('valor_nuevo', models.TextField(blank=True, null=True)),
                ('empleado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.empleado')),
                ('factura', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tr4cking_rest_api.cabecerafactura')),
            ],
        ),
    ]
